<resources>
    <string name="app_name">سامانه 137</string>
    <string name="FolderName">System137</string>
    <string name="ZipFolder">SystemZip</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBqrZETxkzvK6hXKpN_LBQwD83ODMQlnLo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NGRA">درباره تولید کننده</string>
    <string name="UserName">نام کاربری</string>
    <string name="UserPass">رمز ورود</string>
    <string name="Login">ورود</string>
    <string name="ForgetPassword">رمز ورود خود را فراموش کرده اید؟</string>
    <string name="SignUp">ثبت نام</string>
    <string name="GuestUser">ورود بصورت مهمان</string>
    <string name="Cancel">انصراف</string>
    <string name="EmptyUserName">نام کاربری را وارد نمایید</string>
    <string name="EmptyPassword">رمز ورود را وارد نمایید</string>
    <string name="EmptyMobile">تلفن همراه را وارد نمایید</string>
    <string name="EmptyNational">کد ملی را وارد نمایید</string>
    <string name="EmptyFamily">نام خانوادگی را وارد نمایید</string>
    <string name="EmptyName">نام را وارد نمایید</string>
    <string name="EmptyDescription">توضیحات را وارد نمایید</string>
    <string name="EmptySubject">عنوان را وارد نمایید</string>
    <string name="EmptyAddress">آدرس را وارد نمایید</string>
    <string name="EmptyRequestCode">کد پیگیری را وارد نمایید</string>
    <string name="Name">نام</string>
    <string name="Family">نام خانوادگی</string>
    <string name="National">کد ملی</string>
    <string name="PhoneNumber">تلفن همراه</string>
    <string name="Gender">جنسیت</string>
    <string name="Woman">خانم</string>
    <string name="Man">آقا</string>
    <string name="HeyWhatsPhoneNumber">سلام، شماره تلفن همراه شما چند است؟</string>
    <string name="EnterPhoneNumber">"جهت دریافت کد امنیتی \n شماره موبایل خود را در زیر وارد نمایید"</string>
    <string name="VerifyCode">"لطفا 6 عدد کد فعال سازی  \n را وارد نمایید"</string>
    <string name="ElapsedTimeGetSMS">زمان باقی مانده\n جهت دریافت پیامک</string>
    <string name="GetVerifyCode">دریافت کد</string>
    <string name="Ignore">بستن</string>
    <string name="PleaseWait">شکیبا باشید ...</string>
    <string name="onFailure">ارتباط با مرکز برقرار نشد</string>
    <string name="ReTryGetSMS">دریافت مجدد\n پیامک</string>
    <string name="NewRequest">درخواست \n جدید</string>
    <string name="ResultRequest">پیگیری \n درخواست</string>
    <string name="TotalRequests">کل درخواست ها</string>
    <string name="FallowRequest">درحال پیگیری</string>
    <string name="DoneRequest">پاسخ داده شده</string>
    <string name="ReTryRequest">پیگیری مجدد</string>
    <string name="ChooseType">انتخاب نوع</string>
    <string name="SearchTypes">جستجوی نوع درخواست</string>
    <string name="RequestType">نوع درخواست</string>
    <string name="Description">توضیحات</string>
    <string name="Address">آدرس</string>
    <string name="ChooseAddressMap">انتخاب آدرس روی نقشه</string>
    <string name="AddAttachFile">اضافه کردن فایل</string>
    <string name="SendRequest">ارسال درخواست</string>
    <string name="Choose">انتخاب</string>
    <string name="ChooseFile">انتخاب فایل</string>
    <string name="ChooseImage">انتخاب تصویر</string>
    <string name="ChooseVideo">انتخاب ویدیو</string>
    <string name="FilesChoose">تعداد فایلها</string>
    <string name="OverSize1">حجم فایل بیشتر از 1 مگابایت است</string>
    <string name="OverSize2">حجم عکس بیشتر از 3 مگابایت است</string>
    <string name="OverSize3">حجم ویدیو بیشتر از 200 مگابایت است</string>
    <string name="MaxFileChoose1">شما مجاز به انتخاب 2 فایل میباشید</string>
    <string name="MaxFileChoose2">شما مجاز به انتخاب 3 تصویر میباشید</string>
    <string name="MaxFileChoose3">شما مجاز به انتخاب 1 فیلم میباشید</string>
    <string name="MaxFileChoose4">شما مجاز به انتخاب 1 فایل صدا میباشید</string>
    <string name="RepetitiousFile">فایل انتخابی تکراری است</string>
    <string name="RecordVoice">ضبط صدا</string>
    <string name="InProcess">در حال پردازش فایل، کمی دیگر تلاش کنید</string>
    <string name="MaxFileCount">بیشترین تعداد مجاز انتخاب فایل 6 عدد میباشد</string>
    <string name="Survey">نظر سنجی</string>
    <string name="About">درباره شهرداری</string>
    <string name="Help">راهنمای برنامه</string>
    <string name="Exit">خروج</string>
    <string name="RequestCode">کد پیگیری</string>
    <string name="Search">جستجو</string>
    <string name="Show">مشاهده فایلها</string>
    <string name="Hidden">پنهان کردن</string>
    <string name="Back">بازگشت</string>
    <string name="Subject">موضوع</string>
    <string name="Statue">وضعیت</string>
    <string name="TakePartInTheSurvey">شرکت در نظر سنجی</string>
    <string name="SetSurvey">ثبت نظر</string>
    <string name="Next">بعدی</string>
    <string name="Close">بستن</string>

    <string name="HelpChooseAddress">شما میتوانید مکان خود را روی نقشه انتخاب نمایید، با انتخاب مکان، آدرس بصورت اتوماتیک در قسمت آدرس درج میشود</string>
    <string name="HelpAttachFiles">شما میتوانید به همراه درخواست خود فایل نیز ارسال نمایید(انتخاب فایل اختیاری میباشد)</string>
    <string name="HelpShowAttachFiles">با لمس مشاهده فایلها، میتوانید فایلهای انتخابی خود را ببینید و حذف نمایید</string>
    <string name="HelpSendRequest">بعد از تکمیل موارد خواسته شده، برای ارسال درخواست، دکمه ارسال درخواست را لمس نمایید</string>
    <string name="HelpGuest">با انتخاب این گزینه شما برای ارسال درخواستها مجبورید هربار نام و شماره همراه خود را وارد نمایید</string>
    <string name="HelpLogin">بعد از وارد نمودن نام کاربری و رمز، جهت ورود این گزینه را لمس نمایید</string>
    <string name="HelpSignUp">جهت ثبت نام و استفاده بهتر از امکانات نرم افزار این گزینه را لمس نمایید</string>
    <string name="HelpNewRequest">جهت ارسال درخواست جدید از این گزینه استفاده نمایید</string>
    <string name="HelpFallowRequest">جهت پیگیری نتیجه درخواستهای قبلی این گزینه را لمس نمایید</string>
    <string name="HelpTotalRequest">نمایش همه درخواستهای قبلی بدون در نظر گرفتن نتیجه آنها</string>
    <string name="HelpInProgress">جهت نمایش درخواستهای قبلی که در حال پیگیری میباشن از این گزینه استفاده نمایید</string>
    <string name="HelpAnswered">برای دیدن درخواستهای قبلی که پاسخ داده شده، از این گزینه استفاده نمایید</string>
    <string name="HelpFollowUp">برای مشاهده درخواستهایی که شما مایل بودید پیگیری مجدد شوند این گزینه را لمس نمایید</string>
    <string name="HelpChooseDoc">شما میتوانید تعداد 2 عدد فایل را به درخواست خود اضافه نمایید</string>
    <string name="HelpChooseImage">شما میتوانید تعداد 3 عدد تصویر را به درخواست خود اضافه نمایید</string>
    <string name="HelpProgressVideo">شما میتوانید تعداد 1 عدد ویدیو را به درخواست خود اضافه نمایید</string>
    <string name="HelpRecordVoice">شما میتوانید 1 بار صدای خود را به همراه هر درخواستی ارسال نمایید</string>

    <string name="showcase_button">HIDE</string>
    <string name="showcase_description">Showcase Description</string>


</resources>
