<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signup"
            type="com.ngra.system137.viewmodels.fragments.VM_ProfileFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    >

                    <LinearLayout
                        android:id="@+id/layouLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingBottom="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:paddingTop="@dimen/_20sdp"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditUser"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/UserName"
                                android:inputType="textPersonName"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_person"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditPassword"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/UserPass"
                                android:inputType="textPassword"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_lock"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/Name"
                                android:inputType="textPersonName"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_person_outline"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditFamily"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/Family"
                                android:inputType="textPersonName"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_group"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditNational"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/National"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_assistant"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/EditPhoneNumber"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edit_back_tleft_bleft"
                                android:gravity="center"
                                android:hint="@string/PhoneNumber"
                                android:inputType="phone"
                                android:maxLength="11"
                                android:minHeight="@dimen/_27sdp"
                                android:textColor="@color/ML_PrimaryDark"
                                android:textSize="@dimen/_11sdp" />

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/icon_background"
                                android:src="@drawable/ic_phone"
                                android:tint="@color/ML_White" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/Gender"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_11sdp"
                            android:gravity="center"
                            />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:id="@+id/layoutGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >

                                <RadioButton
                                    android:id="@+id/radioWoman"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Woman"
                                    android:textColor="@color/colorAccent"
                                    android:textSize="@dimen/_10sdp"
                                    android:theme="@style/mlCheck"
                                    />

                                <RadioButton
                                    android:id="@+id/radioMan"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/_15sdp"
                                    android:text="@string/Man"
                                    android:textColor="@color/colorAccent"
                                    android:textSize="@dimen/_10sdp"
                                    android:theme="@style/mlCheck"
                                    />

                            </RadioGroup>

                        </LinearLayout>



                        <RelativeLayout
                            android:id="@+id/BtnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:background="@drawable/button_bg"
                            android:paddingTop="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_3sdp">

                            <ImageView
                                android:id="@+id/imgProgress"
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_lock_open"
                                android:tint="@color/ML_White" />


                            <TextView
                                android:id="@+id/BtnLoginText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="@string/Login"
                                android:textColor="@color/ML_White"
                                android:textSize="@dimen/_11sdp" />

                            <com.cunoraz.gifview.library.GifView
                                android:id="@+id/ProgressGif"
                                custom:gif="@drawable/loading"
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_5sdp"
                                android:visibility="invisible" />

                        </RelativeLayout>


                    </LinearLayout>


                </ScrollView>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>

</layout>
