<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="signup"
            type="com.ngra.system137.viewmodels.fragments.VM_SignUpFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/HeyWhatsPhoneNumber"
                        android:textColor="@color/ML_PrimaryDark"
                        fontPath="font/iransans_web_medium.ttf"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/EnterPhoneNumber"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_8sdp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/EditPhoneNumber"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/_27sdp"
                            android:background="@drawable/edit_back_tleft_bleft"
                            android:inputType="phone"
                            android:gravity="center"
                            android:textColor="@color/ML_PrimaryDark"
                            android:textSize="@dimen/_12sdp"
                            android:hint="@string/PhoneNumber"
                            android:maxLength="11"
                            />

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="match_parent"
                            android:background="@drawable/icon_background"
                            android:src="@drawable/ic_person"
                            android:tint="@color/ML_White" />

                    </LinearLayout>





                    <RelativeLayout
                        android:id="@+id/ButtonSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button_bg"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingBottom="@dimen/_3sdp">

                        <ImageView
                            android:id="@+id/imgProgress"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_lock_open"
                            android:tint="@color/ML_White" />


                        <TextView
                            android:id="@+id/BtnLoginText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/GetVerifyCode"
                            fontPath="font/iransans_web_medium.ttf"
                            android:textColor="@color/ML_White"
                            android:textSize="@dimen/_11sdp" />

                        <com.cunoraz.gifview.library.GifView
                            android:id="@+id/ProgressGif"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:visibility="invisible"
                            custom:gif="@drawable/loading" />

                    </RelativeLayout>


                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>



</layout>
